<?xml version="1.0"?>
<package format="2">
    <name>roborts</name>
    <version>1.0.0</version>
    <description>
        The roborts meta package provides all the functionality for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0</license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>roborts_base</exec_depend>
    <exec_depend>roborts_bringup</exec_depend>
    <exec_depend>roborts_common</exec_depend>
    <exec_depend>roborts_costmap</exec_depend>
    <exec_depend>roborts_decision</exec_depend>
    <exec_depend>roborts_localization</exec_depend>
    <exec_depend>roborts_msgs</exec_depend>
    <exec_depend>roborts_planning</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>