<?xml version="1.0"?>
<package format="2">
    <name>roborts_localization</name>
    <version>1.0.0</version>
    <description>
        The roborts localization package provides localization for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_filters</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_filters</exec_depend>

    <depend>libgoogle-glog-dev</depend>
    <depend>map_server</depend>

</package>
