<?xml version="1.0"?>
<package format="2">
    <name>roborts_planning</name>
    <version>1.0.0</version>
    <description>
        The roborts planning package provides motion planning for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roborts_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roborts_common</build_depend>
    <build_depend>roborts_costmap</build_depend>

    <exec_depend>actionlib</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>roborts_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>roborts_common</exec_depend>
    <exec_depend>roborts_costmap</exec_depend>

    <depend>protobuf-dev</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>libg2o</depend>

</package>
